--- a/PopCornFactory_IcedoHector/app/src/main/AndroidManifest.xml
+++ b/PopCornFactory_IcedoHector/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.PopCornFactory_IcedoHector"
         tools:targetApi="31">
         <activity
+            android:name=".CatalogActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SeatSelection"
+            android:exported="false" />
+        <activity
+            android:name=".MovieDetail"
+            android:exported="false" />
+        <activity
             android:name=".DetallePelicula"
             android:exported="false" />
         <activity
